# OpenInna

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: controlbar.cpp  controlbar.cpp.bak  controlbar.h  main.cpp  mpvwidget.cpp  mpvwidget.h
